Fixed hero text clipping over shelf, disabled mobile parallax

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -259,7 +259,7 @@ nav {
         background-repeat: no-repeat;
         background-position: bottom center;
         background-size: cover;
-        z-index: 2;
+        z-index: 4;
     }
 
     #shapes {
